fixed height of profile-img to auto on tablets

--- a/src/styles/_media.scss
+++ b/src/styles/_media.scss
@@ -16,6 +16,16 @@
 
 // large tablets and desktop
 @include mq($max-width: 992px) {
+	.person-container {
+		.popup {
+			.pop-inside {
+				.profile-img {
+					height: auto;
+				}
+			}
+		}
+	}
+
 	#calendar-popOver {
 		#close-cal {
 			left: 80%;
